# system_control_qt

./: .gitignore  CMakeLists.txt  Main.qml  Service_Status.qml  backend.cpp  backend.h  keyboard.cpp  keyboard.h  main.cpp  mouse.cpp  mouse.h  qrgenerator.cpp  qrgenerator.h  serverworker.cpp  serverworker.h  svgelement.cpp  svgelement.h  webclientworker.cpp  webclientworker.h
Capture/: capture.cpp  capture.h
serverlib/: CMakeLists.txt  serverlib.cpp  serverlib.h  serverlib_global.h
